change views.py, services.html, date_time.html

--- a/client/templates/client/date_time.html
+++ b/client/templates/client/date_time.html
@@ -1,4 +1,3 @@
-schedul {{ worker }}
+services: {{ selected_services }}
 
-<br><a href="{% url 'client:menu' %}">MENU</a>
-<br><a href="{% url 'client:services' %}">services</a>
+<br><br><a href="{% url 'client:menu' %}">MENU</a>
